k8s/router-deployement.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: router-deployment
  labels:
    name: router-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: router
  template:
    metadata:
      labels:
        app: router
    spec:
      containers:
        - name: router
          image: router:v1
          ports:
            - containerPort: 3000
          livenessProbe:
            httpGet:
              path: /api/router/health
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 5
          readinessProbe:
            httpGet:
              path: /api/router/health
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 5
          resources:
            limits:
              cpu: "100m"
              memory: "128Mi"
            requests:
              cpu: "100m"
              memory: "128Mi"
