k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sandbox-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: sandbox.com
      http:
        paths:
          - path: /api/sandbox
            pathType: Prefix
            backend:
              service:
                name: sandbox-service
                port:
                  number: 80
